# EasyRemit

./: README.md  github_rep.txt
EasyRemit/: Cargo.toml  bank.db
EasyRemit/src/: db.rs  function.rs  main.rs  signup.rs  success.rs  transfer.rs
src/: db.rs  function.rs  home.rs  login.rs  success.rs
